# neosu

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  build.bat  bump_version.sh  configure  configure.ac  deps.cmake  neosu.vcxproj
.github/workflows/: linux-multiarch.yml  win-multiarch.yml
.github/workflows/docker/: Dockerfile  build.sh
assets/: neosu.manifest  resource.rc
assets/materials/default/: applause.flac  drum-slidertick.flac  menuhit.flac  menuhit_old.flac  normal-hitnormal.flac  skin.ini  soft-slidertick.flac  spinnerbonus.flac  spinnerspin.flac
assets/shaders/: actual_flashlight_f.glsl  actual_flashlight_v.glsl  flashlight_f.glsl  slider_v.glsl  smoothclip_f.glsl
build-aux/misc/: freetype-win.patch  sdl-fix-xinput2-scaled-relative-motion.patch  sdl3-xp.patch
build-contrib/: CMakeLists.txt  deps.cmake
cmake-win/: CMakeLists.txt  build-win64-wine.sh  buildwin64.bat  config.h.in  dependencies.cmake
cmake-win/src/: CMakeLists.txt  binclude.cmake
libraries/: cJSON.cpp  curl_blob.cpp  curl_blob.h  lodepng.cpp  lodepng.h  miniz.cpp
libraries/bass/include/: bass.h
libraries/bass/x64/: bass.lib
libraries/bassasio/include/: bassasio.h
libraries/bassasio/x64/: bassasio.lib
libraries/bassfx/Win32/: bass_fx.lib
libraries/bassfx/include/: bass_fx.h
libraries/bassfx/x64/: bass_fx.lib
libraries/bassloud/Win32/: bassloud.lib
libraries/bassloud/include/: bassloud.h
libraries/bassloud/x64/: bassloud.lib
libraries/bassmix/include/: bassmix.h
libraries/bassmix/x64/: bassmix.lib
libraries/basswasapi/Win32/: basswasapi.lib
libraries/basswasapi/include/: basswasapi.h
libraries/basswasapi/x64/: basswasapi.lib
libraries/bullet/include/: CMakeLists.txt
libraries/directx/include/: d3d11.h  d3d11.idl  d3d11_1.h  d3d11_1.idl  d3d11sdklayers.h  d3dcommon.h  d3dcommon.idl  d3drmobj.h  d3dtypes.h
libraries/discord-rpc/Win32/: discord-rpc.lib
libraries/discord-rpc/include/: discord_register.h  discord_rpc.h
libraries/discord-rpc/x64/: discord-rpc.lib
libraries/discord-sdk/: 2.5.6.txt  3.2.1.txt
libraries/discord-sdk/include/: discord_game_sdk.h
libraries/freetype/Win32/: freetype.lib
libraries/freetype/include/: freetype.h  ft2build.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  fterrdef.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  ftttdrv.h  fttypes.h  ftwinfnt.h  ftxf86.h  t1tables.h  ttnameid.h  tttables.h
libraries/glad_glx/: glad_glx.cpp  glad_glx.h
libraries/glad_wgl/: glad_wgl.cpp  glad_wgl.h
libraries/libcurl/include/: libpsl.h  libssh2.h  libssh2_publickey.h  libssh2_sftp.h  zconf.h  zdict.h  zstd.h  zstd_errors.h
libraries/libjpeg/: 3.0.3.txt
libraries/libjpeg/Win32/: jpeg-static.lib
libraries/libjpeg/include/: jconfig.h  jerror.h  jmorecfg.h  jpeglib.h  turbojpeg.h
libraries/libjpeg/x64/: jpeg-static.lib
libraries/lzma/include/: lzma.h
libraries/opencl/include/: cl.h  cl.hpp  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_egl.h  cl_ext.h  cl_gl.h  cl_platform.h
libraries/openvr/include/: openvr.h  openvr_capi.h  openvr_driver.h  openvr_mingw.hpp  wrap_openvr.py
libraries/rosu-pp-c/: rosu_pp_c.lib
libraries/rosu-pp-c/Win32/: rosu_pp_c.lib
libraries/rosu-pp-c/x64/: rosu_pp_c.lib
libraries/sdl/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_egl.h  (+60 more)
resources/fonts/: SourceSansLicense.txt  ubuntu-font-license-1.0.txt
resources/materials/: missing_texture.mat
resources/shaders/: cursortrail.fsh  cursortrail.vsh  cursortrailVR.vsh  flashlight.fsh  flashlight.vsh  hitcircle3D.fsh  hitcircle3D.vsh  slider.fsh  slider.vsh  sliderVR.fsh  sliderVR.vsh
rosu-pp-c/: Cargo.toml
rosu-pp-c/src/: lib.rs
src/: Makefile.sources  config.h.in
src/App/: App.h
src/Binary/: curl_blob.cpp  curl_blob.h  incbin.h  shaders.cpp  shaders.h
src/Engine/: AnimationHandler.cpp  AnimationHandler.h  Archival.cpp  Archival.h  ByteBufferedFile.cpp  ByteBufferedFile.h  Camera.cpp  Camera.h  ConVar.cpp  ConVar.h  ConVarDefs.h  Console.cpp  Console.h  ContextMenu.cpp  ContextMenu.h  DiscordInterface.cpp  DiscordInterface.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  FPSLimiter.cpp  FPSLimiter.h  File.cpp  File.h  Font.cpp  Font.h  FontTypeMap.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  InputDevice.h  NetworkHandler.cpp  NetworkHandler.h  OpenCLInterface.cpp  OpenCLInterface.h  OpenVRInterface.cpp  OpenVRInterface.h  Profiler.cpp  (+24 more)
src/GUI/: CBaseUI.h  CBaseUIBoxShadow.cpp  CBaseUIBoxShadow.h  CBaseUIButton.cpp  CBaseUIButton.h  CBaseUICanvas.cpp  CBaseUICanvas.h  CBaseUICheckbox.cpp  CBaseUICheckbox.h  CBaseUIContainer.cpp  CBaseUIContainer.h  CBaseUIContainerBase.cpp  CBaseUIContainerBase.h  CBaseUIContainerBox.cpp  CBaseUIContainerBox.h  CBaseUIContainerHorizontalBox.cpp  CBaseUIContainerHorizontalBox.h  CBaseUIContainerVerticalBox.cpp  CBaseUIContainerVerticalBox.h  CBaseUIElement.cpp  CBaseUIElement.h  CBaseUIImage.cpp  CBaseUIImage.h  CBaseUIImageButton.cpp  CBaseUIImageButton.h  CBaseUILabel.cpp  CBaseUILabel.h  CBaseUIScrollView.cpp  CBaseUIScrollView.h  CBaseUISlider.cpp  CBaseUISlider.h  CBaseUITextField.cpp  CBaseUITextField.h  CBaseUITextbox.cpp  CBaseUITextbox.h  CBaseUIWindow.cpp  CBaseUIWindow.h  CWindowManager.cpp  CWindowManager.h  GaussianBlurKernel.cpp  (+1 more)
src/Platform/: BaseEnvironment.h  main.cpp  main_Linux.cpp  main_Windows.cpp  main_impl.cpp  main_impl.h
src/Util/: Color.h  FastDelegate.h  MD5.cpp  MD5.h  MD5Hash.cpp  MD5Hash.h  MakeDelegateWrapper.h  Matrices.cpp  Matrices.h  Parsing.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  SString.h  UString.cpp  UString.h  Vectors.h  cJSON.h  cbase.h  crypto.cpp  crypto.h  dynutils.cpp  dynutils.h  miniz.cpp  miniz.h  noinclude.h  random.cpp  random.h  templates.h  types.h
(+1280 files in other folders)
